# hermes-windows

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GuardianCustomConfiguration.json  LICENSE  README.md  ReactNative.Hermes.Windows.Net.targets  ReactNative.Hermes.Windows.nuspec  ReactNative.Hermes.Windows.targets  hermes-engine.podspec  merged-hermes-revision.txt
.ado/: Microsoft.JavaScript.Hermes.Fat.nuspec  Microsoft.JavaScript.Hermes.nuspec  Microsoft.JavaScript.Hermes.targets  ReactNative.Hermes.Windows.Fat.nuspec  ReactNative.Hermes.Windows.UAP.targets  ReactNative.Hermes.Windows.nuspec  ReactNative.Hermes.Windows.targets  azure-pipelines.yml  jobs.yml  publish.yml  update-hermes.yml  variables.yml
.ado/guardian/sdl/: .gdnsuppress
.ado/scripts/: Extract-TarGz.ps1  Nuget.Config  cibuild.ps1  prepare_boost.ps1  prepare_folly.ps1  prepare_reactnative.ps1  setVersionNumber.js
.circleci/: config.yml
.github/: fabricbot.json
API/: CMakeLists.txt
API/hermes/: CMakeLists.txt  ScriptStore.h  TraceInterpreter.cpp  TracingRuntime.cpp  TracingRuntime.h  hermes.cpp  hermes.h  hermes_dbg.h  hermes_jsi.h  hermes_napi.cpp  hermes_win.cpp  hermes_win.h  js_native_api_hermes.cpp  js_native_api_hermes.h  js_native_ext_api.h  version.rc.in
API/hermes/inspector/chrome/cli/: CMakeLists.txt
API/hermes_abi/: CMakeLists.txt  HermesABIHelpers.h  HermesABIRuntime.cpp  HermesABIRuntime.h  hermes_abi.h  hermes_vtable.cpp  hermes_vtable.h
API/hermes_node_api/: CMakeLists.txt
API/hermes_node_api/node_api/: CMakeLists.txt
API/hermes_node_api_jsi/: NodeApiJsiRuntime.cpp
API/hermes_shared/: hermes_napi.cpp  hermes_win.cpp  hermes_win.h
API/hermes_shared/node-api/: CMakeLists.txt  js_native_api.h
API/inspector/: CMakeLists.txt  InspectorProxy.cpp  InspectorProxy.h  version.rc.in
API/inspector/boost/: CMakeLists.txt
API/inspector/folly/: CMakeLists.txt
API/inspector/react-native/: CMakeLists.txt
API/inspector/react-native-0.72/: CMakeLists.txt
API/inspector/react-native-0.72/ReactCommon/hermes/inspector/chrome/: Registration.h
API/inspector/stubs/glog/: logging.h
API/jsi/jsi/: .clang-format  JSIDynamic.cpp  decorator.h  jsi-inl.h  jsi.cpp  jsi.h
API/napi/: CMakeLists.txt  hermes_api.h  hermes_napi.h  js_native_ext_api.h
API/node-api/: js_runtime_api.h
cmake/modules/: Hermes.cmake
doc/: BuildingAndRunning.md  IntlAPIs.md  TestingWindowsWithVSCode.md
include/hermes/ADT/: ManagedChunkedList.h
include/hermes/AST/: Context.h
include/hermes/Platform/Unicode/: PlatformUnicode.h  icu.h
include/hermes/Support/: Conversions.h  UTF8.h
include/hermes/VM/: Callable.h  CellKinds.def  HadesGC.h  Handle.h  HandleRootOwner.h  HermesValueTraits.h  HostModel.h  JSArray.h  JSArrayBuffer.h  PropertyAccessor.h  StringPrimitive.h
lib/InternalBytecode/: CMakeLists.txt
lib/Platform/: Logging.cpp
lib/Platform/Intl/: CMakeLists.txt  PlatformIntlShared.cpp  PlatformIntlWindows.cpp
lib/Platform/Unicode/: CMakeLists.txt
lib/Support/: CMakeLists.txt  OSCompatWindows.cpp  UTF8.cpp
lib/VM/: HandleRootOwner.cpp  HostModel.cpp  JSArrayBuffer.cpp  JSObject.cpp  JSProxy.cpp  StorageProvider.cpp
lib/VM/JSLib/: HermesBuiltin.cpp  TypedArray.cpp
lib/VM/Profiler/: ChromeTraceSerializer.cpp  ChromeTraceSerializerPosix.cpp  SamplingProfilerPosix.cpp  SamplingProfilerWindows.cpp
lib/VM/gcs/: HadesGC.cpp
npm/: package.json
test/circleci-e2e/: run.sh
tools/benchmark/: CMakeLists.txt  benchmark.cpp
tools/fuzzers/fuzzilli/: CMakeLists.txt
tools/fuzzers/libfuzzer/: CMakeLists.txt
tools/hdb/: CMakeLists.txt  hdb.cpp
tools/hermes/: version.rc.in
tools/jsi/: CMakeLists.txt
tools/node-hermes/: CMakeLists.txt
tools/synth/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/API/: APITest.cpp  APITestFactory.cpp  CMakeLists.txt  SamplingProfilerPosixHermesAPITest.cpp  SynthTraceSerializationTest.cpp  SynthTraceTest.cpp
unittests/NAPI/: CMakeLists.txt  modules.h  napitest.cpp  napitest.h  napitest_hermes.cpp  test_2_function_arguments.cpp  test_3_callbacks.cpp  test_4_object_factory.cpp  test_5_function_factory.cpp  test_6_object_wrap.cpp  test_7_factory_wrap.cpp  test_8_passing_wrapped.cpp  test_array.cpp  test_assert.cpp  test_basics.cpp  test_bigint.cpp  test_constructor.cpp  test_conversions.cpp  test_dataview.cpp  test_date.cpp  test_error.cpp  test_exception.cpp  test_ext.cpp  test_finalizer.cpp  test_function.cpp  test_general.cpp  test_handle_scope.cpp  test_instance_data.cpp  test_new_target.cpp  test_number.cpp  test_object.cpp  test_promise.cpp  test_properties.cpp  test_reference.cpp  test_reference_double_free.cpp  test_string.cpp  test_symbol.cpp  test_typedarray.cpp
unittests/NAPI/js/: CMakeLists.txt  babel.config.js  package.json
unittests/NAPI/js-native-api/6_object_wrap/: test.js  test.js.h
unittests/NAPI/js-native-api/8_passing_wrapped/: test.js.h
unittests/NAPI/js-native-api/test_array/: test.js.h
unittests/NAPI/js-native-api/test_bigint/: test.js.h
unittests/NAPI/js-native-api/test_constructor/: test.js.h
unittests/NAPI/js-native-api/test_error/: test.js  test.js.h
unittests/NAPI/js-native-api/test_function/: test.js.h
unittests/NAPI/js-native-api/test_general/: test.js.h  testFinalizer.js.h
unittests/NAPI/js-native-api/test_new_target/: test.js.h
unittests/NAPI/js-native-api/test_object/: test.js  test.js.h
unittests/NAPI/js-native-api/test_promise/: test.js.h
unittests/NAPI/js-native-api/test_properties/: test.js.h
unittests/NAPI/js-native-api/test_reference/: test.js.h
unittests/NAPI/js-native-api/test_string/: test.js.h
unittests/NAPI/js-native-api/test_typedarray/: test.js.h
unittests/NAPI/lib/: assert_js.cpp
unittests/NodeAPI/: CMakeLists.txt
unittests/NodeAPI/js/: CMakeLists.txt  package.json
unittests/NodeAPI/js-native-api/: files.txt
unittests/PlatformIntl/: CMakeLists.txt
unittests/VMRuntime/: InterpreterTest.cpp  SamplingProfilerPosixTest.cpp  TestHelpers.h
unittests/node-api/: node_api_test.h
utils/: genUnicodeTable.py
utils/testsuite/: testsuite_skiplist.py
website/: package.json
(+11 files in other folders)
